2002-04-20  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    In the obscureish EZMLM mode we LACKED mandatory trailing
	    ">" character at MAIL FROM envelope address.  A major goofup.. :-/
	    (Especially as I use the beast myself sometimes..)

	* transports/mailbox/mboxpath.c:
	    At the  usage()  do document also the -X[X] option.

2002-04-18  Matti Aarnio  <mea@zmailer.org>

	* transports/mailbox/mailbox.c:
	    Finally a bit of understanding about how to manage
	    persistent errno status on sfio streams.

	* transports/smtp/smtp.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c:
	    Persistent error storage things, but as of yet the
	    detail analysis/reporting at calling layers is vague.

	* libc/mail.c, libc/sfmail.c, router/rfc822.c:
	    Add missing  #include "zmsignal.h"  lines...

2002-04-17  Matti Aarnio  <mea@zmailer.org>

	* include/ta.h, transports/libta/diagnostic.c,
	  transports/errormail/errormail.c, transports/smtp/smtp.c,
	  transports/expirer/expirer.c, transports/hold/hold.c,
	  transports/libta/ctlopen.c, transports/mailbox/mailbox.c,
	  transports/smtp/smtp.h:
	    - Add 'FILE *verboselog' parameter to  diagnostic() API
	      call, and get a cascade of things..  That is often the
	      last, undocumented, and most interesting thing anyway..
	    - Play with MAILBOX to detect (and neatly report) when
	      write to a file fails due to EDQUOT ...  Perhaps
	      fail it immediately ? (TODO item..)

2002-04-12  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/getmxrr.c:
	    Extended the test-harness a bit by telling what
	    are the two standard tests for it, and their
	    expected results.

2002-04-05  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Debugging oddball 'yield OK when DEFER is correct' problems..
	    .. and fixed the blunder in the call of  smtpopen().

	* transports/libta/ctlopen.c:
	    The RP data block is not initialized completely in all cases,